# ASTK

./: .gitignore  AgentSprint TestKit (ASTK) 1f967e35aea580859158d89bef6a3949.md  CHANGELOG.md  CI_DISABLED.md  DEPLOYMENT.md  EVALS_TRANSFORMATION_SUMMARY.md  HOW_TO_RUN_RIGOROUS_EVALUATION.md  LICENSE  OPENAI_EVALS_INTEGRATION.md  POST_UPLOAD_VERIFICATION.md  PYPI_SETUP.md  README.md  RELIABLE_CLI_USAGE.md  VERSION_0.2.0_SUMMARY.md  WORKFLOW_CLEANUP_SUMMARY.md  check_deps.py  debug_evaluation.py  otel-collector-config.yaml  pyproject.toml  release.sh  requirements.txt  rigorous_evaluation_20250606_160827_detailed.md  rigorous_evaluation_20250606_161146_detailed.md  rigorous_evaluation_20250606_162214_detailed.md  rigorous_evaluation_20250606_162305_detailed.md  rigorous_evaluation_20250606_162721_detailed.md  setup.py  test_agent_simple.py  test_package.py  test_setup.py  test_single_scenario.yaml
agent_sprint_testkit.egg-info/: PKG-INFO  SOURCES.txt
astk/: __init__.py  cli.py  evals_integration.py
astk_results/: intelligent_benchmark_20250606_124919.json  intelligent_benchmark_20250606_130235.json
benchmark_results/: benchmark_results_20250606_091249.json  benchmark_results_20250606_091324.json  intelligent_benchmark_20250606_091645.json  intelligent_benchmark_20250606_095952.json  intelligent_benchmark_20250606_102901.json  intelligent_benchmark_20250606_103653.json  intelligent_benchmark_20250606_103852.json
config/: benchmark_thresholds.yaml
docs/: AgentSprint TestKit (ASTK) 1f967e35aea580859158d89bef6a3949.md  POST_UPLOAD_VERIFICATION.md  (+1 more)
(+16 files in other folders)
